# efficient-multilingual-continual-pretraining

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
config/: config.yaml
config/task/: amazon_reviews.yaml  cantemist.yaml  cares.yaml  chemprot.yaml  nubes.yaml  openrepair.yaml  pharmaconer.yaml  pretrain_german.yaml  rct.yaml
config/task/pretrain/: atapt_german.yaml  german_dapt.yaml  german_dapt_dsir_100k.yaml  spanish_pretrain_chilean.yaml
efficient_multilingual_continual_pretraining/: __init__.py  constants.py  logger.py  utils.py
efficient_multilingual_continual_pretraining/data/: __init__.py  base_dataset.py  cares_dataset.py  chemprot_dataset.py  chilean_mlm_dataset.py  mlm_dataset.py  ner_dataset.py  nubes_dataset.py  openrepair_dataset.py  rct_dataset.py
efficient_multilingual_continual_pretraining/metrics/: __init__.py  metric_calculator.py  ner_metric_calculator.py
efficient_multilingual_continual_pretraining/metrics/tests/: test_metric_calculator.py
efficient_multilingual_continual_pretraining/models/: __init__.py  base_model.py  base_trainer.py  chemprot_model.py  classification_model.py  ner_model.py  qa_model.py  rct_model.py  trainer.py
efficient_multilingual_continual_pretraining/pipelines/: __init__.py  amazon_reviews_pipeline.py  base_pipeline.py  cares_pipeline.py  chemprot_pipeline.py  mlm_pipeline.py  ner_pipeline.py  nubes_pipeline.py  openrepair_pipeline.py  rct_pipeline.py
notebooks/EDA/: amazon_reviews_multi.ipynb  open_repair_data.ipynb
